# Socket_Singleton

./: README.md  pyproject.toml  test_app.py  tests.py
src/: Socket_Singleton.py
src/Socket_Singleton/: Socket_Singleton.py
src/socket_singleton/: __init__.py
src/socket_singleton_/: __init__.py
tests/: helper_app.py  test_socket_singleton.py
